--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
 <app-navbar></app-navbar>
+<p-toast position="top-center"></p-toast>
 <div class="main">
   <router-outlet />
   @if(scrollPosition > 150){
