--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -1,43 +1,49 @@
-<div class="containerAuth">
-  <div
-    class="container d-flex flex-column justify-content-center align-items-center imgFondoAuth"
-  >
-    <h5 class="text-center titleAuth col-12">Reset cuenta</h5>
-    <div class="card p-4" style="max-width: 600px; width: 100%; height: 40%">
-      <form [formGroup]="resetPassword" (ngSubmit)="onSubmit()"  class="mx-0 my-auto">
-        <!-- Campo Email -->
-        <div  class="mb-3">
-          <label for="email" class="form-label">Email</label>
-          <input
-            type="email"
-            placeholder="Email"
-            class="form-control"
-            required
-            formControlName="mail"
-          />
-          @if(resetPassword.get('mail')?.invalid &&
-          resetPassword.get('mail')?.touched){
-          <div>
-            @if(resetPassword.get('mail')?.errors?.['required']){
-            <small style="color: red">El campo es obligatorio</small>
-            } @if(resetPassword.get('mail')?.errors?.['email']){
-            <small style="color: red">El formato de correo es inválido</small>
+@if(loading){
+  <app-loading></app-loading>
+} @else {
+  <div class="containerAuth">
+    <div
+      class="container d-flex flex-column justify-content-center align-items-center imgFondoAuth"
+    >
+      <h5 class="text-center titleAuth col-12">Reset cuenta</h5>
+      <div class="card p-4" style="max-width: 600px; width: 100%; height: 40%">
+        <form [formGroup]="resetPassword" (ngSubmit)="onSubmit()"  class="mx-0 my-auto">
+          <!-- Campo Email -->
+          <div  class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input
+              type="email"
+              placeholder="Email"
+              class="form-control"
+              required
+              formControlName="mail"
+            />
+            @if(resetPassword.get('mail')?.invalid &&
+            resetPassword.get('mail')?.touched){
+            <div>
+              @if(resetPassword.get('mail')?.errors?.['required']){
+              <small style="color: red">El campo es obligatorio</small>
+              } @if(resetPassword.get('mail')?.errors?.['email']){
+              <small style="color: red">El formato de correo es inválido</small>
+              }
+            </div>
             }
           </div>
-          }
-        </div>
-        <!-- Campo Contraseña -->
-
-        <!-- Botón de Enviar -->
-        <button
-          style="margin-top: 10px; color: white"
-          [disabled]="resetPassword.invalid"
-          class="btn btn-primary w-100"
-          type="submit"
-        >
-          Enviar
-        </button>
-      </form>
+          <!-- Campo Contraseña -->
+  
+          <!-- Botón de Enviar -->
+          <button
+            style="margin-top: 10px; color: white"
+            [disabled]="resetPassword.invalid"
+            class="btn btn-primary w-100"
+            type="submit"
+          >
+            Enviar
+          </button>
+        </form>
+      </div>
     </div>
   </div>
-</div>
+}
+
+
