--- a/src/app/shared/components/loading/loading/loading.component.css
+++ b/src/app/shared/components/loading/loading/loading.component.css
@@ -3,48 +3,30 @@
     display: flex;
     justify-content: center;  /* Centra horizontalmente */
     align-items: center;      /* Centra verticalmente */
-    height: 100vh;            /* Ocupa toda la altura de la pantalla */
+    height: 80vh;            /* Ocupa toda la altura de la pantalla */
   }
+/* HTML: <div class="loader"></div> */
 .loader {
-    width: 45px;
-    height: 30px;
-    background:
-      linear-gradient(#004ce4 0 0) 0 100%/100% 50%,
-      linear-gradient(#004ce4 0 0) 0 0   /calc(100%/3) 100%;
-    background-repeat: no-repeat;
-    position: relative;
-    clip-path: inset(-100% 0 0 0);
-    animation: l2-0 2s infinite steps(4);
+    width: 100px;
+    aspect-ratio: 1;
+    display: grid;
+    border-radius: 50%;
+    background: conic-gradient(#25b09b 25%,#f03355 0 50%,#514b82 0 75%,#ffa516 0);
+    animation: l22 2s infinite linear;
   }
   .loader::before,
   .loader::after {
-    content: "";
-    position: absolute;
-    inset:-50% 0 50%;
-    background:
-      linear-gradient(#00e622 0 0) 0 0      /calc(2*100%/3) 50%,
-      linear-gradient(#00e622 0 0) 100% 100%/calc(2*100%/3) 50%;
-    background-repeat: no-repeat;
-    animation: inherit;
-    animation-name: l2-1;
+     content: "";
+     grid-area: 1/1;
+     margin: 15%;
+     border-radius: 50%;
+     background: inherit;
+     animation: inherit;
   }
   .loader::after {
-    inset:-100% 0 100%;
-    background:
-      linear-gradient(#e50021 0 0) 0    0/100%         50%,
-      linear-gradient(#e50021 0 0) 100% 0/calc(100%/3) 100%;
-    background-repeat: no-repeat; 
-    animation-name: l2-2;
+     margin: 25%;
+     animation-duration: 3s;
   }
-  @keyframes l2-0{
-    0%       {transform: translateY(-250%);clip-path: inset(100% 0 0 0)}
-    25%,100% {transform: translateY(0);clip-path: inset(-100% 0 0 0)}
-  }
-  @keyframes l2-1{
-    0% ,25%  {transform: translateY(-250%)}
-    50%,100% {transform: translateY(0)}
-  }
-  @keyframes l2-2{
-    0% ,50%  {transform: translateY(-250%)}
-    75%,100% {transform: translateY(0)}
+  @keyframes l22 {
+    100% {transform: rotate(1turn)}
   }
