--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -13,14 +13,15 @@
           class="mx-0 my-auto"
         >
           <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input
+            <p-floatLabel>
+              <input
               type="email"
               id="email"
               class="form-control"
               formControlName="email"
-              placeholder="Ingresa tu email"
             />
+            <label for="username">Email</label>
+            </p-floatLabel>           
             @if(loginForm.get('email')?.invalid && loginForm.get('email')?.touched){
               <div class="text-danger text-center"> 
                 @if(loginForm.get('email')?.hasError('required')){
@@ -33,14 +34,18 @@
             }         
           </div>
           <div class="mb-3">
-            <label for="password" class="form-label">Contraseña</label>
-            <input
+            <p-floatLabel>
+              <input
               type="password"
               id="password"
               class="form-control"
               formControlName="password"
               placeholder="Ingresa tu contraseña"
             />
+            <label for="username">Contraseña</label>
+            </p-floatLabel>
+            
+            
             @if(loginForm.get('password')?.invalid &&
                 loginForm.get('password')?.touched){
             <div class="text-danger text-center">
@@ -57,7 +62,7 @@
   
           <button
             type="submit"
-            class="btn btn-primary w-100"
+            class="btn btn-primary w-100 button"
             [disabled]="loginForm.invalid"
           >
             Iniciar Sesión
