--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -14,14 +14,15 @@
         class="mx-0 my-auto"
       >
         <div class="mb-3">
-          <label for="user" class="form-label">Nombre</label>
-          <input
+          <p-floatLabel>
+            <input
             type="text"
             id="name"
             class="form-control"
             formControlName="user"
-            placeholder="Ingresa tu nombre"
           />
+          <label for="user">Nombre</label>
+          </p-floatLabel>        
           @if(registerForm.get('user')?.invalid &&
           registerForm.get('user')?.touched){
           <div class="text-danger text-center">
@@ -32,14 +33,15 @@
           }
         </div>
         <div class="mb-3">
-          <label for="email" class="form-label">Email</label>
-          <input
+          <p-floatLabel>
+            <input
             type="email"
             id="email"
             class="form-control"
             formControlName="email"
-            placeholder="Ingresa tu email"
           />
+          <label for="email">Email</label>
+          </p-floatLabel>          
           @if(registerForm.get('email')?.invalid &&
           registerForm.get('email')?.touched){
           <div class="text-danger text-center">
@@ -52,14 +54,15 @@
           }
         </div>
         <div class="mb-3">
-          <label for="password" class="form-label">Contraseña</label>
-          <input
+          <p-floatLabel>
+            <input
             type="password"
             id="password"
             class="form-control"
             formControlName="password"
-            placeholder="Ingresa tu contraseña"
           />
+          <label for="password">Contraseña</label>
+          </p-floatLabel>          
           @if(registerForm.get('password')?.invalid &&
           registerForm.get('password')?.touched){
           <div class="text-danger text-center">
@@ -72,16 +75,16 @@
           }
         </div>
         <div class="mb-3">
-          <label for="confirmPassword" class="form-label"
-            >Confirmar Contraseña</label
-          >
-          <input
+          <p-floatLabel>
+            <input
             type="password"
             id="confirmPassword"
             class="form-control"
             formControlName="confirmPassword"
             placeholder="Confirma tu contraseña"
           />
+          <label for="confirmPassword">Confirmar Contraseña</label>
+          </p-floatLabel>          
           @if(registerForm.invalid && registerForm.hasError('mismatch')){
           <div class="text-danger text-center">
             <small>Las contraseñas no coinciden.</small>
