--- a/src/app/auth/new-password/new-password.component.html
+++ b/src/app/auth/new-password/new-password.component.html
@@ -10,14 +10,15 @@
         class="mx-0 my-auto"
       >
         <div class="mb-3">
-          <label for="password" class="form-label">Contraseña</label>
-          <input
+          <p-floatLabel>
+            <input
             type="password"
             id="password"
             class="form-control"
             formControlName="password"
-            placeholder="Ingresa tu contraseña"
           />
+          <label for="password">Contraseña</label>
+          </p-floatLabel>          
           @if(newPassword.get('password')?.invalid &&
               newPassword.get('password')?.touched){
           <div class="text-danger text-center">
@@ -32,14 +33,16 @@
           
         </div>
         <div class="mb-3">
-          <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
-          <input
+          <p-floatLabel>
+            <input
             type="password"
             id="password"
             class="form-control"
             formControlName="confirmPassword"
             placeholder="Confirma tu contraseña"
           />
+          <label for="confirmPassword">Confirmar Contraseña</label>
+          </p-floatLabel>          
           @if(newPassword.get('confirmPassword')?.invalid &&
               newPassword.get('confirmPassword')?.touched){
           <div class="text-danger text-center">
