--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -10,14 +10,15 @@
         <form [formGroup]="resetPassword" (ngSubmit)="onSubmit()"  class="mx-0 my-auto">
           <!-- Campo Email -->
           <div  class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input
+            <p-floatLabel>
+              <input
               type="email"
-              placeholder="Email"
               class="form-control"
               required
               formControlName="mail"
             />
+            <label for="email">Email</label>
+            </p-floatLabel>            
             @if(resetPassword.get('mail')?.invalid &&
             resetPassword.get('mail')?.touched){
             <div>
