--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -83,7 +83,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" [routerLink]="['add/party']" (click)="closeOffcanvas()">Añadir fiestas</a></li>
               <hr style="color: white;"/>
-              <li><a class="dropdown-item" href="#" (click)="closeOffcanvas()">Clientes</a></li>
+              <li><a class="dropdown-item"  [routerLink]="['/clients']" (click)="closeOffcanvas()">Clientes</a></li>
               <!-- <li>
                   <hr class="dropdown-divider">
                 </li> -->
