--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,8 +4,8 @@
   min-height: calc(80vh - 120px); 
   padding: 20px;
   width: 100%; /* Elimina max-width */
-  /* background-color: rgb(36, 0, 70); */
-  background-color: #000000;
+  background-color: rgb(37, 42, 42);
+  /* background-color: #000000; */
   display: flex;
   padding-top: 100px;
   flex-direction: column;
