home muestra de letras

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -52,11 +52,11 @@
             <a class="nav-link" aria-current="page" [routerLink]="['']" (click)="closeOffcanvas()">Inicio</a>
           </li>
           <hr style="color: white;"/>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" aria-current="page" [routerLink]="['gallery']" (click)="closeOffcanvas()">Galeria</a
             >
           </li>
-          <hr style="color: white;"/>
+          <hr style="color: white;"/> -->
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['partys']" (click)="closeOffcanvas()">Calendario de fiestas</a>
           </li>
