--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -128,4 +128,33 @@
   .social-links i {
     margin-right: 8px;
   }
+
+.letras{
+  display: flex;
+  justify-content: center;
+  
+}
+
+  /* pruebas de letras */
+  .primera{
+    color: white;
+    font-family: "oswald", sans-serif;
+  }
+  .segunda{
+    color: white;
+    font-family: "Montserrat", sans-serif;
+  }
+  .tercera{
+    color: white;
+    font-family: "Roboto", sans-serif;
+
+  }
+  .cuarta{
+    color: white;
+    font-family: 'Orbitron', sans-serif;
+  }
+  .quinta{
+    color: white;
+    font-family: 'Bebas Neue';
+  }
   
