--- a/src/app/pages/tarifas/tarifas.component.html
+++ b/src/app/pages/tarifas/tarifas.component.html
@@ -6,56 +6,57 @@
   </div>
   <p-panel [toggleable]="true" [collapsed]="true" class="custom-panel">
     <ng-template pTemplate="header">
-      <div class="flex align-items-center gap-2">
+      <div class="flex align-items-center gap-2" style="display: flex;align-items: stretch;">
         <p-avatar image="/images/logo.JPG" size="large" shape="circle" />
-        <span class="font-bold font-parejas"> Parejas </span>
+        <span class="font-bold font-parejas" style="line-height: 1"> Parejas </span>
       </div>
     </ng-template>
     <p class="m-0 font-parejas-text">
-      -De domingo a jueves – 50€ – 4 copas<br />
-      -Viernes – 60€ – 4 copas<br />
-      -Sábado – 70€ – 4 copas<br />
-      -Víspera de festivo: 50€ con 4 copas y uso completo de instalaciones.<br />
+      De domingo a jueves – 50€ – 4 copas<br />
+      Viernes – 60€ – 4 copas<br />
+      Sábado – 70€ – 4 copas<br />
+      Víspera de festivo: 50€ con 4 copas y uso completo de instalaciones.<br />
     </p>
   </p-panel>
   <p-panel [toggleable]="true" [collapsed]="true" class="custom-panel">
     <ng-template pTemplate="header">
-      <div class="flex align-items-center gap-2">
+      <div class="flex align-items-center gap-2"  style="display: flex;align-items: stretch;">
         <p-avatar image="/images/logo.JPG" size="large" shape="circle" />
         <span class="font-bold font-chicos"> Chicos </span>
       </div>
     </ng-template>
     <p class="m-0 font-chicos-text">
-        -Domingo a miércoles – 50€ – 1 copa y uso completo instalaciones.<br/>
-        -Jueves – 30€ – 2 copas y acceso a zona común. Acceso completo a instalaciones supervisado por encargado de sala (+50€)<br/>
-        -Vísperas de festivo – 80€ – 2 copas y uso completo instalaciones.<br/>
-        -Entrada selectiva bajo supervisión de encargado de sala.<br/>
+        Domingo a miércoles – 50€ – 1 copa y uso completo instalaciones.<br/>
+        Jueves – 30€ – 2 copas y acceso a zona común. Acceso completo a instalaciones supervisado por encargado de sala (+50€)<br/>
+        Vísperas de festivo – 80€ – 2 copas y uso completo instalaciones.<br/>
+        Entrada selectiva bajo supervisión de encargado de sala.<br/>
     </p>
   </p-panel>
   <p-panel [toggleable]="true" [collapsed]="true" class="custom-panel">
     <ng-template pTemplate="header">
-      <div class="flex align-items-center gap-2">
+      <div class="flex align-items-center gap-2"  style="display: flex;align-items: stretch;">
         <p-avatar image="/images/logo.JPG" size="large" shape="circle" />
         <span class="font-bold font-chicas"> Chicas </span>
       </div>
     </ng-template>
-    <p class="m-0 font-chicas-text">-De domingo a jueves – 10€ – 1 copa y uso completo de instalaciones.<br/>
-        -Viernes y sábados – 20€ – 1 copa y uso completo de instalaciones.</p>
+    <p class="m-0 font-chicas-text">
+        De domingo a jueves – 10€ – 1 copa y uso completo de instalaciones.<br/>
+        Viernes y sábados – 20€ – 1 copa y uso completo de instalaciones.</p>
   </p-panel>
   <p-panel [toggleable]="true" [collapsed]="true" class="custom-panel">
     <ng-template pTemplate="header">
-      <div class="flex align-items-center gap-2">
+      <div class="flex align-items-center gap-2"  style="display: flex;align-items: stretch;">
         <p-avatar image="/images/logo.JPG" size="large" shape="circle" />
         <span class="font-bold font-trios"> Trios </span>
       </div>
     </ng-template>
     <p class="m-0 font-trios-text">
-        -Pareja y un chico<br/>
-        -Domingo a miércoles 100€ – 5 copas<br/>
-        -Jueves – 130€ – 6 copas<br/>        
-        -Pareja y un chica<br/>
-        -Viernes y sábado 100€ – 6 copas<br/>
-        -Domingo a jueves 70€ – 6 copas<br/>        
+        Pareja y un chico<br/>
+        Domingo a miércoles 100€ – 5 copas<br/>
+        Jueves – 130€ – 6 copas<br/>        
+        Pareja y un chica<br/>
+        Viernes y sábado 100€ – 6 copas<br/>
+        Domingo a jueves 70€ – 6 copas<br/>        
         (Los trios siempre tienen uso completo de instalaciones)<br/>
     </p>
   </p-panel>
