--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,16 +8,34 @@
     </div>
   </div> -->
 <!-- Hero Section -->
-<section class="hero-section">
+<!-- <section class="hero-section">
   <div class="hero-content">
     <h1>Bienvenido a Alma's w Club</h1>
     <p></p>
     <button pButton type="button" label="Comenzar" icon="pi pi-arrow-right" class="btn-primary"> <a href="partys"> Descubre nuestras fiestas</a></button>
   </div>
-</section>
+</section> -->
+<div >
+  <h2 class="letras" style="color: white">Pruebas de letras</h2>
+  <p class="primera">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel augue eget nisl bibendum fringilla. Ut venenatis sapien id lectus vulputate, ac tincidunt nulla accumsan. Curabitur nec arcu at justo tristique sodales. Quisque laoreet consequat nisi, ac ultricies elit gravida sit amet. Integer malesuada eu nisi nec varius. Sed sed urna non magna dignissim fermentum.
+  </p>
+  <hr style="color: white;"/>
+  <p class="segunda">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel augue eget nisl bibendum fringilla. Ut venenatis sapien id lectus vulputate, ac tincidunt nulla accumsan. Curabitur nec arcu at justo tristique sodales. Quisque laoreet consequat nisi, ac ultricies elit gravida sit amet. Integer malesuada eu nisi nec varius. Sed sed urna non magna dignissim fermentum.
+  </p>
+  <hr style="color: white;"/>
+  <p class="tercera">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel augue eget nisl bibendum fringilla. Ut venenatis sapien id lectus vulputate, ac tincidunt nulla accumsan. Curabitur nec arcu at justo tristique sodales. Quisque laoreet consequat nisi, ac ultricies elit gravida sit amet. Integer malesuada eu nisi nec varius. Sed sed urna non magna dignissim fermentum.
+  </p>
+  <hr style="color: white;"/>
+  <p class="cuarta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel augue eget nisl bibendum fringilla. Ut venenatis sapien id lectus vulputate, ac tincidunt nulla accumsan. Curabitur nec arcu at justo tristique sodales. Quisque laoreet consequat nisi, ac ultricies elit gravida sit amet. Integer malesuada eu nisi nec varius. Sed sed urna non magna dignissim fermentum.
+  </p>
+  <hr style="color: white;"/>
+  <p class="quinta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel augue eget nisl bibendum fringilla. Ut venenatis sapien id lectus vulputate, ac tincidunt nulla accumsan. Curabitur nec arcu at justo tristique sodales. Quisque laoreet consequat nisi, ac ultricies elit gravida sit amet. Integer malesuada eu nisi nec varius. Sed sed urna non magna dignissim fermentum.
+  </p>
+</div>
+
 
 <!-- Servicios -->
-<section class="services-section">
+<!-- <section class="services-section">
   <h2 class="text-white">Nuestros Servicios</h2>
   <div class="p-grid">
     <div class="p-col-12 p-md-4 " *ngFor="let service of services" [@zoomIn]>
@@ -31,10 +49,10 @@
       </p-card>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- Testimonios Carousel -->
-<section class="testimonials-section">
+<!-- <section class="testimonials-section">
   <h2>Lo que Dicen Nuestros Clientes</h2>
   <p-carousel [value]="testimonials" [numVisible]="1" [circular]="true" [autoplayInterval]="3000">
     <ng-template let-testimonial pTemplate="item">
@@ -47,5 +65,5 @@
       </div>
     </ng-template>
   </p-carousel>
-</section>
+</section> -->
 
