--- a/src/app/pages/tarifas/tarifas.component.css
+++ b/src/app/pages/tarifas/tarifas.component.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     margin: 0 auto;
-    background-color: #240048;
+    background-color: rgb(37, 42, 42);
 }
 @media (max-width: 720px) {
     .tarifas {
@@ -23,49 +23,51 @@ align-items: center;
 }
 
 .font-parejas{
-    font-size:100px;
-    font-family: "Montserrat", sans-serif;
+    font-size:30px;
+    font-family: "oswald", sans-serif;
 }
 .font-parejas-text{
     font-size:20px;
     font-family: "Montserrat", sans-serif;
 }
 .font-chicos{
-    font-size:100px;
-    font-family: "Bebas Neue", sans-serif;
+    font-size:30px;
+    font-family: "oswald", sans-serif;
 }
 .font-chicos-text{
     font-size:20px;
-    font-family: "Bebas Neue", sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 .font-chicas{
-    font-size:100px;
-    font-family: "Roboto", sans-serif;
+    font-size:30px;
+    font-family: "oswald", sans-serif;
 }
 .font-chicas-text{
     font-size:20px;
-    font-family: "Roboto", sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 .font-trios{
-    font-size:100px;
+    font-size:30px;
     font-family: "oswald", sans-serif;
 }
 .font-trios-text{
     font-size:20px;
-    font-family: "oswald", sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 /* estilos de los panel de primeng */
 :host ::ng-deep .custom-panel .p-panel-header {
-    background-color: black !important; /* Color del encabezado */
-    color: #fff !important; /* Color del texto en el encabezado */
-    border: none !important; /* Eliminar el borde si es necesario */
-    padding: 1.25rem !important; /* Ajustar el padding */
+    background-color: black !important; 
+    color: #fff !important; 
+    border: none !important; 
+    padding: 1.25rem !important; 
+    margin: 1.25rem !important;
 }
 
 :host ::ng-deep .custom-panel .p-panel-content {
-    background: #240048 !important; /* Color del contenido */
+    background:  rgb(37, 42, 42) !important; /* Color del contenido */
     color: #f1eeee !important; /* Color del texto */
+    border: none !important
 }
 
  
@@ -98,28 +100,28 @@ align-items: center;
   
   @media (max-width: 576px) {
     .font-parejas{
-        font-size:30px;
+        font-size:20px;
     }
     .font-parejas-text{
-        font-size:8px;
+        font-size:10px;
     }
     .font-chicos{
-        font-size:30px;
+        font-size:20px;
     }
     .font-chicos-text{
-        font-size:8px;
+        font-size:10px;
     }
     .font-chicas{
-        font-size:30px;
+        font-size:20px;
     }
     .font-chicas-text{
-        font-size:8px;
+        font-size:10px;
     }
     .font-trios{
-        font-size:30px;
+        font-size:20px;
     }
     .font-trios-text{
-        font-size:8px;
+        font-size:10px;
 
     }
   }
