--- a/src/app/pages/partys/partys.component.html
+++ b/src/app/pages/partys/partys.component.html
@@ -3,13 +3,23 @@
 <p>No te pierdas las fiestas más locas de la noche madrileña. El mejor ambiente swinger de Madrid.</p>
 <div class="card-container">
       @for(item of partys; track item){
-        <div class="card">
-        <img src={{item.image}} alt={{item.nombre}}>
-        <div class="overlay">
-          <h2>{{item.nombre}}</h2>
-          <p>{{item.fecha}}</p>
-          <!-- <span></span> -->
-        </div>
+        <div class="card flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src={{item.image}} alt={{item.nombre}}>
+              <div class="overlay">
+                <h2>{{item.nombre}}</h2>
+                <p>{{item.fecha}}</p>
+                <!-- <span></span> -->
+              </div>
+              </div>
+              <div class="flip-card-back">
+                <!-- <h1>John Doe</h1> -->
+                <span>{{item.descripcion}}</span>
+                <!-- <p>We love that guy</p> -->
+              </div>
+              </div>  
+        
       </div>
     }
   </div>
