--- a/src/app/pages/partys/partys.component.html
+++ b/src/app/pages/partys/partys.component.html
@@ -1,6 +1,6 @@
 
 <h1  class="sticky-header">Fiestas {{obtenerMesActual()}}</h1>
-<p>No te pierdas las fiestas más locas de la noche madrileña. El mejor ambiente swinger de Madrid.</p>
+<p style="text-align: center;">No te pierdas las fiestas más locas de la noche madrileña. El mejor ambiente swinger de Madrid.</p>
 <div class="card-container">
       @for(item of partys; track item){
         <div class="card flip-card">
