--- a/src/app/pages/partys/partys.component.css
+++ b/src/app/pages/partys/partys.component.css
@@ -79,12 +79,12 @@ h2, p, h3 {
   border: 5px solid #fff;
   border-radius: 50%;
   z-index: -1;
-  box-shadow: 0 0 20px rgba(255, 255, 255, 0.5); /* resplandor circular */
+  
 }
 
 .overlay p {
-  font-size: 18px;
-  color: #c0c0c0;
+  font-size: 26px;
+  color: #fff;
   margin-bottom: 20px;
 }
 
@@ -158,6 +158,7 @@ h2, p, h3 {
   background-color: transparent;
   color: white;
   transform: rotateY(180deg);
+  padding: 15px;
   
   span{
     color: white;
