--- a/src/app/pages/partys/partys.component.html
+++ b/src/app/pages/partys/partys.component.html
@@ -8,6 +8,7 @@
             <div class="flip-card-front">
               <img src={{item.image}} alt={{item.nombre}}>
               <div class="overlay">
+                <!-- <img src="/images/mano.png" style="width: 50px; height: auto;" /> -->
                 <h2>{{item.nombre}}</h2>
                 <p>{{item.fecha}}</p>
                 <!-- <span></span> -->
