--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -98,7 +98,7 @@
           Registrarse
         </button>
         <div class="container">
-          <a href="login" class="textAuth mt-3"
+          <a  [routerLink]="['/login']" class="textAuth mt-3"
             >¿Ya tienes cuenta?, <span class="spanAuth">Inicia Sesión</span></a
           >
         </div>
