--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -5,9 +5,9 @@
     <div
       class="container d-flex flex-column justify-content-center align-items-center imgFondoAuth"
     >
-      <!-- <h5 class="text-center titleAuth col-12">Reset cuenta</h5> -->
+      <h5 class="text-center titleAuth col-12">Reset cuenta</h5>
       <p style="color:white"><span class="text">Introduce tu correo electrónico y te enviaremos un enlace para restablecer tu contraseña.</span></p>
-      <div class="card p-4" style="max-width: 600px; width: 100%; height: 40%">
+      <div class="card p-2" style="max-width: 600px; width: 100%; height: 20%">
         <form [formGroup]="resetPassword" (ngSubmit)="onSubmit()"  class="mx-0 my-auto">
           <!-- Campo Email -->
           <div  class="mb-3">
