--- a/src/app/pages/partys/partys.component.css
+++ b/src/app/pages/partys/partys.component.css
@@ -7,7 +7,8 @@
 }
 
 h1 {
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  text-transform: uppercase;
   color: white;
 }
 
