--- a/src/app/auth/auth-styles.css
+++ b/src/app/auth/auth-styles.css
@@ -57,6 +57,7 @@
     display: grid;
     align-items: center;
     margin-top: 5px;
+    width: 50%;
   }
   .textAuth{
     width: 100%;
@@ -88,6 +89,9 @@
     label{
       font-size: 25px;
     }
+    .container{
+      width: 100%;
+    }
   }
   
   @media (max-width: 1200px) {
@@ -97,6 +101,9 @@
     label{
       font-size: 23px;
     }
+    .container{
+      width: 100%;
+    }
   }
   
   @media (max-width: 768px) {
@@ -105,6 +112,9 @@
     }
     label{
       font-size: 19px;
+    }
+    .container{
+      width: 100%;
     }
   }
   
@@ -119,6 +129,9 @@
       height: 80vh;
     }
     .imgFondoAuth:before{
-      height: 90%;
+      height: 100%;
+    }
+    .container{
+      width: 100%;
     }
   }
