--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -29,17 +29,15 @@
     font-family: "Roboto", sans-serif;
     opacity: 1;
     z-index: 1; 
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex-flow: column;
   }
   .hero-content h1 {
-    font-size: 3em;
-    margin-bottom: 0.5em;
-    font-family: "Roboto", sans-serif;
-  }
-  
-  .hero-content p {
-    font-size: 1.2em;
-    margin-bottom: 1.5em;
-  }
+    margin-bottom: 3rem;
+    font-size: 23rem;
+}
   .btn-primary {
     background-color: var(--second-purple);
     border-color: var(--second-purple);
@@ -47,6 +45,12 @@
     width: 100%;
     text-align: center;
     font-size: medium;
+    padding: 15px 30px; 
+    font-size: 1rem; 
+    /* /background-color: #ff4081;  */
+    border: none; 
+    color: #fff; 
+    cursor: pointer;
   }
   .btn-primary > a{
     color: white;
@@ -134,6 +138,54 @@
   justify-content: center;
   
 }
+
+swiper-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+swiper-slide img {
+  height: 100%; 
+  width: 100%; 
+  object-fit: cover; 
+}
+.slider-containerMobile{
+  height: 100vh; 
+  width: 50%;
+  padding: 10px;
+}
+
+
+@media (min-width: 1200px) {
+  .hero-content h1 {
+    margin-bottom: 3rem;
+    font-size: 14rem;
+}
+}
+
+@media (max-width: 1200px) {
+  .hero-content h1 {
+    margin-bottom: 3rem;
+    font-size: 10rem;
+}
+}
+
+@media (max-width: 768px) {
+  .hero-content h1 {
+    margin-bottom: 3rem;
+    font-size: 10rem;
+}
+}
+
+@media (max-width: 576px) {
+  .hero-content h1 {
+    margin-bottom: 3rem;
+    font-size: 6rem;
+}
+}
+
 
  
   
