--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,13 +10,37 @@
 <!-- Hero Section -->
 <section class="hero-section">
   <div class="hero-content">
-    <h1>Bienvenido a Alma's w Club</h1>
-    <p></p>
-    <button pButton type="button" label="Comenzar" icon="pi pi-arrow-right" class="btn-primary"> <a href="partys"> Descubre nuestras fiestas</a></button>
+    <p class=""hero-content_p>Explora lo Prohibido</p>
+    <h1 class=""hero-content_h1><span class="hero-content_span">Alma's w </span>Club</h1>
+    <!-- <button pButton type="button" label="Comenzar" icon="pi pi-arrow-right" class="btn-primary" onclick="location.href='partys'">Descubre nuestras fiestas</button> -->
   </div>
 </section>
+<section id="gallery" class="d-flex">
+<swiper-container class="slider-containerDesktop mySwiper col-6">
+  <swiper-slide *ngFor="let sImages of sliderImagesDesktop">
+    <img [src]="sImages" alt="3">
+  </swiper-slide>
+</swiper-container>
+<div class="col-6">
+  <h2>Nuestras instalaciones</h2>
+  <p>lorem</p>
+</div>
+</section>
 
+<section id="partys" class="d-flex">
+  <swiper-container class="slider-containerDesktop mySwiper col-6">
+    <swiper-slide *ngFor="let sImages of sliderImagesDesktop">
+      <img [src]="sImages" alt="3">
+    </swiper-slide>
+  </swiper-container>
 
+  </section>
+<!-- <swiper-container class="slider-containerMobile mySwiper" pagination="true" pagination-clickable="true" direction="vertical"
+space-between="30" mousewheel="true">
+  <swiper-slide *ngFor="let sImages of sliderImagesMobile">
+    <img [src]="sImages" alt="3">
+  </swiper-slide>
+</swiper-container> -->
 
 <!-- Servicios -->
 <!-- <section class="services-section">
